# ai-job-copilot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.json
evals/: checks.py  judge.py  run_evals.py  sample-report.json
evals/dataset/: backend_python_jd.md  cases.json
examples/: sample_cv.md  sample_jd.md
src/job_copilot/: __init__.py  api.py  cli.py  client.py  config.py  models.py  pdf.py  pipeline.py  prompts.py
tests/: conftest.py  test_checks.py  test_judge.py  test_pdf.py  test_pipeline.py
web/: .env.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  types.ts
