[project]
name = "ai-job-copilot"
version = "0.1.0"
description = "A grounded, evaluated LLM pipeline that tailors a CV to a job description."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kareem Ghazal" }]
keywords = ["llm", "ai", "anthropic", "claude", "evals", "structured-output"]
dependencies = [
    "anthropic>=0.40",
    "fpdf2>=2.7",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
job-copilot = "job_copilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_copilot"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
